--- a/src/toric/gordan_algebraic_blueprint.tex
+++ b/src/toric/gordan_algebraic_blueprint.tex
@@ -42,7 +42,7 @@ A blueprint for Gordan's Lemma.
 
 What we are going for is the following. Let $\Lambda$ be a finite free $\Z$-module, and let $\Lambda^*:=\Hom(\Lambda,\Z)$ be its dual. If $S$ is a subset of $\Lambda^*$ (always finite, in practice, I think) then its \emph{dual $\Z$-cone} $S^\vee$ consists of the $t\in\Lambda$ such that $\langle s,t\rangle\geq0$ for all $s\in S$.
 
-Note that the dual $\Z$-cone is an additive submonoid of~$\Lambda$, but it need not be a $\Z$-module: multiplying by negative integers will reverse all the inequalities implied by being in the dual $\Z$-cone!
+Note that the dual $\Z$-cone is an additive submonoid of~$\Lambda$, but it need not be a $\Z$-module: multiplying by negative integers will reverse all the inequalities implied by being in the dual $\Z$-cone!  For instance $\N \subset \Z$ is the dual $\Z$-cone of $\{1\} \subset \Z$, viewing $\Z$ as its own dual, via multiplication.
 
 Our goal is to prove the following result.
 
