--- a/src/toric/gordan_algebraic_blueprint.tex
+++ b/src/toric/gordan_algebraic_blueprint.tex
@@ -148,9 +148,9 @@ homogeneous, and
 \item
 have strictly positive degree.
 \end{itemize}
-Let $N_0 \in \N$ be the maximum of the degrees of the generators $f_1, \ldots , f_r$:
+Let $N \in \N$ be the maximum of the degrees of the generators $f_1, \ldots , f_r$:
 \[
-N_0 = \max \{ \deg f_1 , \ldots , \deg f_r \}.
+N = \max \{ \deg f_1 , \ldots , \deg f_r \}.
 \]
 Let $\An \subset \Az$ be the subset consisting all the homogeneous elements of degree at most~$N$.  Note that, in particular, all the chosen generators $f_1, \ldots , f_r$ are contained in~$\An$.  We show that~$\An$ generates~$\Az$ as an $A_0$-algebra.
 
